feat(modal): form submit button

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -2,11 +2,12 @@
 // Toggle global options
 $enable-shadows: true;
 
+$blue: #1565D8;
+
 // Customize some defaults
 $body-color: #333;
 $body-bg: #fff;
-$border-radius: .4rem;
-$success: #7952b3;
+
 
 $modal-inner-padding-y: 3rem;
 $modal-inner-padding-x: 4rem; // 64px
@@ -23,3 +24,9 @@ $modal-footer-padding-y: $modal-header-padding-y;
 $modal-footer-padding-x: $modal-inner-padding-x;
 
 $modal-md: 490px;
+
+$btn-padding-y-lg: 14px;
+$btn-padding-x-lg: 20px;
+$btn-font-size-lg: 1.125rem; // 18px
+$btn-border-radius-lg: 8px;
+$btn-font-weight: 700;
