--- a/src/scss/utils/_bootstrap.scss
+++ b/src/scss/utils/_bootstrap.scss
@@ -26,9 +26,12 @@
 
 @import "variables";
 
+
 // Required
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
+
+@import "maps";
 @import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
