feat(modal): inputs

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -30,3 +30,14 @@ $btn-padding-x-lg: 20px;
 $btn-font-size-lg: 1.125rem; // 18px
 $btn-border-radius-lg: 8px;
 $btn-font-weight: 700;
+
+//Form
+$form-label-margin-bottom: 0.75rem;
+$form-label-font-size: 1rem;
+$form-label-color: #5A7184;
+$form-label-font-weight: 600;
+
+$input-padding-y: 15px;
+$input-padding-x: 20px;
+$input-border-color: #C3CAD9;
+$input-border-radius: 8px;
