feat(modal): placeholder

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -42,6 +42,7 @@ $input-padding-y: 15px;
 $input-padding-x: 20px;
 $input-border-color: #C3CAD9;
 $input-border-radius: 8px;
+$input-placeholder-color: #959EAD;
 
 $btn-close-width: .75em;
 $btn-close-height: $btn-close-width;
