--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -25,6 +25,7 @@ $modal-footer-padding-y: $modal-header-padding-y;
 $modal-footer-padding-x: $modal-inner-padding-x;
 
 $modal-md: 490px;
+$modal-backdrop-opacity: .8;
 
 $btn-padding-y-lg: 14px;
 $btn-padding-x-lg: 20px;
